Add clients logos

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -143,6 +143,14 @@ h5
   .blockchains
     text-align center
     padding-top 1rem
+
+    .logos 
+      display flex
+      align-items center
+      justify-content: center
+
+      img
+        padding: 0 10px
     
 .theme-default-content:not(.custom)
   max-width 850px !important
