Update sidebar styling

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -44,6 +44,9 @@ h5
 
 .sidebar
   background-color: #2B2B2B
+
+.sidebar-sub-headers
+  display inline-block
   
 .navbar
   background-color: #2B2B2B
